[package]
name = "adventofcode-2023"
version = "0.1.0"
authors = ["Jarkko Mourujarvi <jarkko@iki.fi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"

[[bin]]
name = "01"
path = "src/01/day1.rs"

[[bin]]
name = "02"
path = "src/02/day2.rs"
